<resources>
    <string name="app_name">Swasthya Path</string>
    <string name="author">Aditya Pawar</string>
    <string name="login_btn_text">Login</string>
    <string name="signup_text">Don\'t have any account? Signup</string>
    <string name="login_screen_head_text">Login to continue your journey</string>
    <string name="wlcm_bck_txt">Welcome Back</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_logout">Logout</string>
    <string name="signup_btn">Create Account</string>
    <string name="no_diet_plan_txt">No diet plan found for today. Please check your network or try again.</string>
</resources>